@@ -308,12 +308,15 @@ length : String -> Nat
 length = fromInteger . prim__zextInt_BigInt . prim_lenString
 
 ||| Returns a substring of a given string
-||| @index The (zero based) index of the string to extract. If this is
-||| beyond the end of the String, the function returns the empty string.
-||| @len The desired length of the substring. Truncated if this exceeds
-||| the length of the input.
-substr : (index : Nat) -> (len : Nat) -> String -> String
-substr i len = pack . List.take len . drop i . unpack
+|||
+||| @ index The (zero based) index of the string to extract. If this is
+|||         beyond the end of the string, the function returns the empty
+|||         string.
+||| @ len The desired length of the substring. Truncated if this exceeds
+|||       the length of the input.
+||| @ subject The string to return a portion of
+substr : (index : Nat) -> (len : Nat) -> (subject : String) -> String
+substr i len subject = prim__strSubstr (cast i) (cast len) subject
 
 ||| Lowercases all characters in the string.
 |||
