@@ -3,3 +3,9 @@
 ("abc", "123")
 ([1, 2], [3, 4, 5])
 ([1, 2], [3, 4, 5])
+ello! here's the thing
+22
+0
+用的依赖类
+Idris
+[]
