@@ -1,4 +1,6 @@
 #!/usr/bin/env bash
 idris $@ test005.idr -o test005
 ./test005
-rm -f test005 test005.ibc
+idris $@ substring.idr -o substring
+./substring
+rm -f test005 substring *.ibc
